@@ -295,6 +295,8 @@ GNU/Linux/OpenRISC		or1k*-*-linux*
 * Building GDB now requires GMP (The GNU Multiple Precision Arithmetic
   Library).
 
+* Add convenience variable `$_simd_lane`.
+
 * MI changes
 
  ** '-break-insert --qualified' and '-dprintf-insert --qualified'
